--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "babel-plugin-macros": "^3.1.0",
+    "classnames": "^2.5.1",
     "font-awesome": "^4.7.0",
     "mongoose": "^8.3.3",
     "react": "^18.3.1",
